# shovel

./: README.md  pyproject.toml
shovel/: __main__.py  cli.py
shovel-worker/: package-lock.json  package.json  wrangler.toml
shovel-worker/src/: bindings.d.ts  handler.ts
shovel/src/traceroute/: __init__.py  trace.py
