[tool.poetry]
name = "shovelpy"
version = "1.0.0"
description = "Network utils"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
repository = "https://github.com/vcokltfre/shovel"
packages = [
    { include = "shovel/" },
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
rich = "^10.16.1"
icmplib = "^3.0.2"
ipwhois = "^1.2.0"
prompt-toolkit = "^3.0.24"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
